# robotframework-seriallibrary

./: CHANGES.rst  LICENSE  README.rst  pyproject.toml  setup.cfg  setup.py
docs/: SerialLibrary.html  api.rst
src/SerialLibrary/: __init__.py  version.py
tests/acceptance/: test_library.robot
